<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:layout_margin="@dimen/spacing_xxxlarge"
    android:layout_gravity="center_horizontal"
    android:padding="@dimen/spacing_large"
    android:background="@color/QRCodeWhiteColor"
    >

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:hint="@string/hint_name"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:id="@+id/name_txt_lyt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/regex_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:hint="@string/hint_mobile"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:id="@+id/mobile_txt_lyt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/regex_mobile"
            android:maxLength="10"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:id="@+id/contact_pick"
        android:text="Pick From contact"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:hint="@string/hint_username"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:id="@+id/username_txt_lyt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/regex_username"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/user_location_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:dropDownSelector="@color/amber_400"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Spinner.Underlined"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:hint="@string/hint_address"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:id="@+id/address_txt_lyt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/spacing_xxlarge"
            android:digits="@string/regex_address"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateuser"
        style="@style/NiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:keepScreenOn="true"
        android:paddingLeft="@dimen/spacing_xlarge"
        android:paddingRight="@dimen/spacing_xlarge"
        android:text="Submit"
         />

</LinearLayout>
