<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@android:color/transparent"
    android:layout_margin="@dimen/spacing_large"
    android:padding="@dimen/spacing_xxlarge">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:layout_marginBottom="@dimen/spacing_middle"
    android:background="@android:drawable/dialog_holo_light_frame"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/user_title"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/red_600"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <Button
                android:id="@+id/user_btn_close"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_action_close"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:hint="@string/hint_name"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:id="@+id/name_txt_lyt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/regex_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:hint="@string/hint_mobile"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:id="@+id/mobile_txt_lyt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/regex_mobile"
            android:inputType="phone"
            android:maxLength="10"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:hint="@string/hint_username"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:id="@+id/username_txt_lyt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/regex_username"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/user_location_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:dropDownSelector="@color/amber_400"
        android:entries="@array/array_location_name"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Spinner.Underlined"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:hint="@string/hint_address"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:id="@+id/address_txt_lyt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/spacing_xxlarge"
            android:digits="@string/regex_address"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateuser"
        style="@style/NiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:keepScreenOn="true"
        android:paddingLeft="@dimen/spacing_xlarge"
        android:paddingRight="@dimen/spacing_xlarge"
        android:text="Submit"
         />

</LinearLayout>
</ScrollView>